<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="152px"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="152px"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bg"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/hello_world" />

    <RelativeLayout
        android:id="@+id/bg"
        android:layout_width="152px"
        android:layout_height="154px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/web_kk_bg_pic" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="48px"
            android:layout_height="48px"
            android:layout_centerInParent="true"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/loading_drawable" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="152px"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/app_name" />
    </RelativeLayout>

</RelativeLayout>